Create blueprint using the hack on ipython and vs code notifications

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1f95450b",
+   "id": "c8787b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,117 +14,73 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bb73c1ba",
+   "id": "57696798",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pynput.keyboard import Controller, Key\n",
+    "import pandas as pd\n",
+    "import polars as pl\n",
+    "from IPython.core.getipython import get_ipython\n",
     "\n",
-    "keyboard = Controller()\n",
+    "from notifier import (\n",
+    "    wrap_in_custom_try_except,\n",
     "\n",
-    "def run_success_keybinding(keyboard: Controller):\n",
-    "    keyboard.press(Key.cmd)\n",
-    "    keyboard.press(Key.shift)\n",
-    "    keyboard.press(Key.alt)\n",
-    "    keyboard.press('g')\n",
-    "\n",
-    "    keyboard.release(Key.cmd)\n",
-    "    keyboard.release(Key.shift)\n",
-    "    keyboard.release(Key.alt)\n",
-    "    keyboard.release(\"g\")\n",
-    "\n",
-    "\n",
-    "def run_failed_keybinding(keyboard: Controller):\n",
-    "    keyboard.press(Key.cmd)\n",
-    "    keyboard.press(Key.shift)\n",
-    "    keyboard.press(Key.alt)\n",
-    "    keyboard.press(\"b\")\n",
-    "\n",
-    "    keyboard.release(Key.cmd)\n",
-    "    keyboard.release(Key.shift)\n",
-    "    keyboard.release(Key.alt)\n",
-    "    keyboard.release(\"b\")\n",
-    "\n",
-    "\n",
-    "run_success_keybinding(keyboard)\n",
-    "run_failed_keybinding(keyboard)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a7915c09",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_failed_keybinding(keyboard)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "5a48665c",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'Javascript' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mJavascript\u001b[49m(\n\u001b[32m      2\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[33;03mconst vscode = require('vscode');\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[33;03mconsolte.log(\"Test direct from Jupyter Notebook!\");\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[33;03mvscode.window.showWarningMessage(\"Test direct from Jupyter Notebook!\");\u001b[39;00m\n\u001b[32m      6\u001b[39m \n\u001b[32m      7\u001b[39m \u001b[33;03m}\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      9\u001b[39m )\n",
-      "\u001b[31mNameError\u001b[39m: name 'Javascript' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "Javascript(\n",
-    "    \"\"\"\n",
-    "const vscode = require('vscode');\n",
-    "consolte.log(\"Test direct from Jupyter Notebook!\");\n",
-    "vscode.window.showWarningMessage(\"Test direct from Jupyter Notebook!\");\n",
-    "\n",
-    "}\n",
-    "\"\"\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "64c13fc6",
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'console' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mconsole\u001b[49m.log(\u001b[33m\"\u001b[39m\u001b[33mTest direct from Jupyter Notebook!\u001b[39m\u001b[33m\"\u001b[39m);\n",
-      "\u001b[31mNameError\u001b[39m: name 'console' is not defined"
-     ]
-    }
-   ],
+   "execution_count": 3,
+   "id": "94f51849",
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "console.log(\"Test direct from Jupyter Notebook!\");"
+    "ip = get_ipython()\n",
+    "\n",
+    "ip.input_transformers_post.append(wrap_in_custom_try_except)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7d71289e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = pd.DataFrame({\"a\": [1, 2, 3]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ac9de60c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raise ValueError(\"This is a test error\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa4d7ff6",
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "id": "d6b0fb11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aea18ef",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1902acee",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
