Simplify test notebook

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -2,79 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c8787b9e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "57696798",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
     "import polars as pl\n",
-    "from IPython.core.getipython import get_ipython\n",
-    "\n",
-    "from notifier import (\n",
-    "    wrap_in_custom_try_except,\n",
-    "\n",
-    ")"
+    "import pelage as plg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "94f51849",
+   "execution_count": null,
+   "id": "d5c2f4f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ip = get_ipython()\n",
-    "\n",
-    "ip.input_transformers_post.append(wrap_in_custom_try_except)"
+    "%load_ext notifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "7d71289e",
+   "execution_count": null,
+   "id": "e33eabb6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = pd.DataFrame({\"a\": [1, 2, 3]})"
+    "a = pl.DataFrame({\"a\": [1, 2, 3]}).pipe(plg.accepted_values, {\"a\": [1, 2, 3]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ac9de60c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "raise ValueError(\"This is a test error\")"
+    "raise ValueError()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6b0fb11",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2aea18ef",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
