Create a basic processing with pandas

--- a/demonstration.ipynb
+++ b/demonstration.ipynb
@@ -115,9 +115,28 @@
     "    emissions.pipe(plg.accepted_values, {\"obfcm_data_source\": [\"OEM\", \"MS\"]})\n",
     "    .pipe(plg.accepted_range, {\"reporting_period\": (2021, 2023)})\n",
     "    .pipe(plg.accepted_range, {\"year\": (2021, 2023)})\n",
-    "    .select(pl.col.year.value_counts())\n",
-    "    .collect()\n",
+    "\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e59f587d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emissions.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0c1b93b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emissions.select(pl.col.country.unique()).collect()"
    ]
   },
   {
@@ -127,7 +146,49 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(emissions.head(20_000).collect().sample(20))"
+    "df = emissions.collect().to_pandas()\n",
+    "df = df[~df[\"country\"].isin([\"RO\", \"LT\", \"LU\", \"LV\", \"EE\", \"CY\"])]\n",
+    "df = df[df[\"electric_range_km\"] < 40]\n",
+    "df.drop([\"vehicle_family_number\"], axis=1, inplace=True)\n",
+    "df = df.dropna(subset=[\"fuel_consumption\"])\n",
+    "df[\"manufacturer_name\"] = df[\"manufacturer_name\"].apply(lambda x: x.replace(\" \", \"-\"))\n",
+    "df[\"fuel_consumption_per_100km\"] = df[\"fuel_consumption\"] * 100\n",
+    "\n",
+    "grouped = []\n",
+    "for country in df[\"country\"].unique():\n",
+    "    for manufacturer in df[\"manufacturer_name\"].unique():\n",
+    "\n",
+    "        for year in df[\"year\"].unique():\n",
+    "            subset_df = df[\n",
+    "                (df[\"year\"] == year)\n",
+    "                & (df[\"manufacturer_name\"] == manufacturer)\n",
+    "                & (df[\"country\"] == country)\n",
+    "            ]\n",
+    "            result = {\n",
+    "                \"country\": country,\n",
+    "                \"manufacturer_name\": manufacturer,\n",
+    "                \"year\": year,\n",
+    "                \"mean_fuel_consumption\": subset_df[\"fuel_consumption_per_100km\"].mean(),\n",
+    "                \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(),\n",
+    "                \"vehicle_count\": subset_df.vehicle_id.nunique(),\n",
+    "            }\n",
+    "            grouped.append(result)\n",
+    "\n",
+    "grouped = pd.DataFrame(grouped)\n",
+    "\n",
+    "grouped = grouped.sort_values(\"mean_fuel_consumption\", ascending=False)\n",
+    "# Filter for years 2022 and 2023 only\n",
+    "grouped = grouped[grouped[\"year\"].isin([2022, 2023])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43b1e887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped"
    ]
   },
   {
@@ -137,7 +198,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = emissions.collect().to_pandas()"
+    "df = emissions.collect().to_pandas()\n",
+    "df = df[~df[\"country\"].isin([\"RO\", \"LT\", \"LU\", \"LV\", \"EE\", \"CY\"])]\n",
+    "df.drop([\"vehicle_family_number\"], axis=1, inplace=True)\n",
+    "df = df.dropna(subset=[\"fuel_consumption\"])\n",
+    "df = df[df[\"electric_range_km\"] < 40]\n",
+    "df[\"manufacturer_name\"] = df[\"manufacturer_name\"].apply(lambda x: x.replace(\" \", \"-\"))\n",
+    "df[\"fuel_consumption_per_100km\"] = df[\"fuel_consumption\"] * 100\n",
+    "grouped = (\n",
+    "    df.groupby([\"country\", \"manufacturer_name\", \"year\"])\n",
+    "    .agg(\n",
+    "        mean_fuel_consumption=(\"fuel_consumption\", \"mean\"),\n",
+    "        mean_electric_range=(\"electric_range_km\", \"mean\"),\n",
+    "        vehicle_count=(\"vehicle_id\", \"count\"),\n",
+    "    )\n",
+    "    .reset_index()\n",
+    ")\n",
+    "grouped = grouped.sort_values(\"mean_fuel_consumption\", ascending=False)\n",
+    "\n",
+    "grouped = grouped[grouped[\"year\"].isin([2022, 2023])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9332ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = emissions.collect().to_pandas()\n",
+    "df = (\n",
+    "    df[~df[\"country\"].isin([\"RO\", \"LT\", \"LU\", \"LV\", \"EE\", \"CY\"])]\n",
+    "    .drop([\"vehicle_family_number\"], axis=1)\n",
+    "    .dropna(subset=[\"fuel_consumption\"])\n",
+    "    .loc[lambda df: df[\"electric_range_km\"] < 40]\n",
+    "    .assign(\n",
+    "        manufacturer_name=lambda df: df[\"manufacturer_name\"].str.replace(\" \", \"-\"),\n",
+    "        fuel_consumption_per_100km=lambda df: df[\"fuel_consumption\"] * 100,\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "grouped = (\n",
+    "    df.groupby([\"country\", \"manufacturer_name\", \"year\"])\n",
+    "    .agg(\n",
+    "        mean_fuel_consumption=(\"fuel_consumption\", \"mean\"),\n",
+    "        mean_electric_range=(\"electric_range_km\", \"mean\"),\n",
+    "        vehicle_count=(\"vehicle_id\", \"count\"),\n",
+    "    )\n",
+    "    .reset_index()\n",
+    "    .sort_values(\"mean_fuel_consumption\", ascending=False)\n",
+    "    .loc[lambda df: df[\"year\"].isin([2022, 2023])]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37aa7f73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grouped"
    ]
   },
   {
