Improve names for dataframe

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -93,13 +93,13 @@
     "        \"Ewltp (g/km)\": \"ewltp_g_per_km\",\n",
     "        \"Ft\": \"fuel_type\",\n",
     "        \"Fm\": \"fuel_mode\",\n",
-    "        # \"Ec (cm3)\": pl.Float64,\n",
-    "        # \"Ep (KW)\": pl.Float64,\n",
-    "        # \"Z (Wh/km)\": pl.Float64,\n",
+    "        \"Ec (cm3)\": \"engine_capacity_cm3\",\n",
+    "        \"Ep (KW)\": \"engine_power_kw\",\n",
+    "        \"Z (Wh/km)\": \"electric_consumption_wh_per_km\",\n",
     "        \"Year\": \"year\",\n",
     "        \"Fuel consumption\": \"fuel_consumption\",\n",
     "        \"Electric range (km)\": \"electric_range_km\",\n",
-    "        # \"Used in calculation\": pl.Int64,\n",
+    "        \"Used in calculation\": \"used_in_calculation\",\n",
     "    }\n",
     ")\n"
    ]
