Simplify the layout of the demonstration

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -112,7 +112,10 @@
    "outputs": [],
    "source": [
     "emissions_pandas = (\n",
-    "    emissions.filter(pl.col.electric_range_km.is_null()).collect().to_pandas()\n",
+    "    emissions.filter(pl.col.electric_range_km.is_not_null())\n",
+    "    .filter(pl.col.country.is_in([\"RO\", \"LT\"]).not_())\n",
+    "    .collect()\n",
+    "    .to_pandas()\n",
     ")"
    ]
   },
@@ -124,9 +127,8 @@
    "outputs": [],
    "source": [
     "df = emissions_pandas\n",
-    "df = df[~df[\"country\"].isin([\"RO\", \"LT\"])]\n",
-    "df.drop([\"vehicle_family_number\"], axis=1, inplace=True)\n",
     "df = df.dropna(subset=[\"fuel_consumption\"])\n",
+    "df.drop([\"vehicle_family_number\"], axis=1, inplace=True)\n",
     "\n",
     "df[df[\"fuel_type\"] == \"PETROL\"][\"fuel_type\"] = \"petrol\"\n",
     "df[\"fuel_consumption_per_100km\"] = df[\"fuel_consumption\"] * 100\n",
@@ -136,26 +138,17 @@
     "    manuf_df = df[df[\"manufacturer_name\"] == manufacturer]\n",
     "    for year in df[\"year\"].unique():\n",
     "        subset_df = manuf_df[(manuf_df[\"year\"] == year)]\n",
-    "        result = {\n",
-    "            \"manufacturer_name\": manufacturer,\n",
-    "            \"year\": year,\n",
+    "        result = {\"manufacturer_name\": manufacturer, \"year\": year,\n",
     "            \"mean_fuel_consumption\": subset_df[\"fuel_consumption_per_100km\"].mean(),\n",
-    "            \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(),\n",
-    "            \"vehicle_count\": subset_df.vehicle_id.nunique(),\n",
+    "            \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(), \"vehicle_count\": subset_df[\"vehicle_id\"].nunique(),\n",
     "        }\n",
     "        grouped.append(result)\n",
     "\n",
     "grouped = pd.DataFrame(grouped)\n",
     "grouped = grouped.dropna()\n",
     "grouped = grouped.sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
-    "grouped = grouped[grouped[\"year\"].isin([2022, 2023])]\n",
-    "grouped = grouped.reset_index(drop=True)\n",
-    "\n",
-    "old_df = grouped\n",
-    "\n",
-    "pd.testing.assert_frame_equal(\n",
-    "    grouped.reset_index(drop=True), old_df.reset_index(drop=True)\n",
-    ")"
+    "grouped = grouped[grouped[\"vehicle_count\"] >= 100]\n",
+    "grouped = grouped.reset_index(drop=True)\n"
    ]
   },
   {
@@ -165,19 +158,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = emissions_pandas\n",
-    "df = (\n",
-    "    df[~df[\"country\"].isin([\"RO\", \"LT\"])]\n",
-    "    .drop(columns=[\"vehicle_family_number\"])\n",
-    "    .dropna(subset=[\"fuel_consumption\"])\n",
+    "main_yearly_emissions_per_manufacturer = (\n",
+    "    emissions_pandas.dropna(subset=[\"fuel_consumption\"])\n",
+    "    .drop([\"vehicle_family_number\"], axis=1)\n",
     "    .assign(\n",
-    "        fuel_type=lambda df: df[\"fuel_type\"].replace(\"PETROL\", \"petrol\"),\n",
+    "        fuel_type=lambda df: df[\"fuel_type\"].replace({\"PETROL\": \"petrol\"}),\n",
     "        fuel_consumption_per_100km=lambda df: df[\"fuel_consumption\"] * 100,\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "grouped = (\n",
-    "    df.groupby([\"manufacturer_name\", \"year\"])\n",
+    "    .groupby([\"manufacturer_name\", \"year\"])\n",
     "    .agg(\n",
     "        mean_fuel_consumption=(\"fuel_consumption_per_100km\", \"mean\"),\n",
     "        mean_electric_range=(\"electric_range_km\", \"mean\"),\n",
@@ -185,7 +173,8 @@
     "    )\n",
     "    .reset_index()\n",
     "    .sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
-    "    .loc[lambda df: df[\"year\"].isin([2022, 2023])]\n",
+    "    .loc[lambda df: df[\"vehicle_count\"] >= 100]\n",
+    "    .reset_index(drop=True)\n",
     ")"
    ]
   },
@@ -196,30 +185,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pl = (\n",
-    "    pl.LazyFrame(emissions_pandas)\n",
-    "    .filter(pl.col.country.is_in([\"RO\", \"LT\"]).not_())\n",
-    "    .drop(\"vehicle_family_number\")\n",
+    "main_yearly_emissions_per_manufacturer = (\n",
+    "    pl.DataFrame(emissions_pandas)\n",
     "    .drop_nulls(subset=[\"fuel_consumption\"])\n",
+    "    .drop([\"vehicle_family_number\"])\n",
     "    .with_columns(\n",
-    "        fuel_type=pl.col.fuel_type.replace(\"PETROL\", \"petrol\"),\n",
+    "        fuel_type=pl.col.fuel_type.replace({\"PETROL\": \"petrol\"}),\n",
     "        fuel_consumption_per_100km=pl.col.fuel_consumption * 100,\n",
     "    )\n",
-    ")\n",
-    "\n",
-    "grouped = (\n",
-    "    df_pl.group_by(\"manufacturer_name\", \"year\")\n",
+    "    .group_by(\"manufacturer_name\", \"year\")\n",
     "    .agg(\n",
     "        mean_fuel_consumption=pl.col.fuel_consumption_per_100km.mean(),\n",
     "        mean_electric_range=pl.col.electric_range_km.mean(),\n",
-    "        vehicle_count=pl.col.vehicle_id.n_unique(),\n",
+    "        vehicle_count=pl.col.vehicle_id.n_unique().cast(pl.Int64),\n",
     "    )\n",
-    "    .cast({\"vehicle_count\": pl.Int64})\n",
     "    .sort([\"mean_fuel_consumption\", \"year\"], descending=True)\n",
-    "    .filter(pl.col.year.is_in([2022, 2023]))\n",
-    "    .collect()\n",
+    "    .filter(pl.col.vehicle_count >= 100)\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7fc7825d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
