Add some elements with pelage

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -24,10 +24,7 @@
    "outputs": [],
    "source": [
     "emissions_pandas = (\n",
-    "    emissions.filter(pl.col.electric_range_km.is_not_null())\n",
-    "    .filter(pl.col.country.is_in([\"RO\", \"LT\"]).not_())\n",
-    "    .collect()\n",
-    "    .to_pandas()\n",
+    "    emissions.filter(pl.col.electric_range_km.is_null()).collect().to_pandas()\n",
     ")"
    ]
   },
@@ -50,9 +47,12 @@
     "    manuf_df = df[df[\"manufacturer_name\"] == manufacturer]\n",
     "    for year in df[\"year\"].unique():\n",
     "        subset_df = manuf_df[(manuf_df[\"year\"] == year)]\n",
-    "        result = {\"manufacturer_name\": manufacturer, \"year\": year,\n",
+    "        result = {\n",
+    "            \"manufacturer_name\": manufacturer,\n",
+    "            \"year\": year,\n",
     "            \"mean_fuel_consumption\": subset_df[\"fuel_consumption_per_100km\"].mean(),\n",
-    "            \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(), \"vehicle_count\": subset_df[\"vehicle_id\"].nunique(),\n",
+    "            \"mean_electric_range\": subset_df[\"electric_range_km\"].mean(),\n",
+    "            \"vehicle_count\": subset_df[\"vehicle_id\"].nunique(),\n",
     "        }\n",
     "        grouped.append(result)\n",
     "\n",
@@ -60,7 +60,7 @@
     "grouped = grouped.dropna()\n",
     "grouped = grouped.sort_values([\"mean_fuel_consumption\", \"year\"], ascending=False)\n",
     "grouped = grouped[grouped[\"vehicle_count\"] >= 100]\n",
-    "grouped = grouped.reset_index(drop=True)\n"
+    "grouped = grouped.reset_index(drop=True)"
    ]
   },
   {
@@ -93,13 +93,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b3088e53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emissions_polars = pl.DataFrame(emissions_pandas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f4c01073",
    "metadata": {},
    "outputs": [],
    "source": [
     "main_yearly_emissions_per_manufacturer = (\n",
-    "    pl.DataFrame(emissions_pandas)\n",
-    "    .drop_nulls(subset=[\"fuel_consumption\"])\n",
+    "    emissions_polars.drop_nulls(subset=[\"fuel_consumption\"])\n",
     "    .drop([\"vehicle_family_number\"])\n",
     "    .with_columns(\n",
     "        fuel_type=pl.col.fuel_type.replace({\"PETROL\": \"petrol\"}),\n",
@@ -130,7 +139,81 @@
    "id": "b4fbb6c4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "emissions_for_tdd = emissions.filter(pl.col.electric_range_km.is_not_null()).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "849fcbb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emissions_for_tdd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e18016a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    emissions_for_tdd.drop_nulls(subset=\"model_variant\")\n",
+    "    .with_columns(pl.col.fuel_type.str.to_lowercase().str.strip_chars())\n",
+    "    .filter(pl.col.fuel_type.is_in([\"diesel\", \"petrol\"]).not_())\n",
+    "    .filter(pl.len().over([\"vehicle_id\", \"year\", \"used_in_calculation\"]) == 1)\n",
+    "    .pipe(\n",
+    "        plg.has_no_nulls,\n",
+    "        [\n",
+    "            \"country\",\n",
+    "            \"manufacturer_name\",\n",
+    "            \"model_type\",\n",
+    "            \"model_variant\",\n",
+    "            \"brand_name\",\n",
+    "\n",
+    "            \"year\",\n",
+    "            \"registered_category\",\n",
+    "        ],\n",
+    "    )\n",
+    "    .pipe(plg.custom_check, pl.col.fuel_type.str.contains(r\"[A-Z]\").not_())\n",
+    "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
+    "    .pipe(\n",
+    "        plg.unique_combination_of_columns, [\"vehicle_id\", \"year\", \"used_in_calculation\"]\n",
+    "    )\n",
+    "    .pipe(plg.has_mandatory_values, {\"year\": [2021, 2022, 2023]}, group_by=\"vehicle_id\")\n",
+    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd6c9120",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    emissions_for_tdd.select(\n",
+    "        \"country\",\n",
+    "        \"vehicle_family_number\",\n",
+    "        \"manufacturer_name\",\n",
+    "        \"model_type\",\n",
+    "        \"model_variant\",\n",
+    "        \"brand_name\",\n",
+    "        \"commercial_name\",\n",
+    "        \"registered_category\",\n",
+    "    ).unique()\n",
+    "    # .group_by(\"model_variant\")\n",
+    "    # .agg(pl.all().unique())\n",
+    "    .select(\"brand_name\")\n",
+    "    .unique()\n",
+    "    .pipe(plg.custom_check, pl.col.brand_name.str.contains_any([r\".\", \"-\"]).not_())\n",
+    "    # .pipe(plg.che)\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
