--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "emissions_pandas = (\n",
-    "    emissions.filter(pl.col.electric_range_km.is_null()).collect().to_pandas()\n",
+    "    emissions.filter(pl.col.electric_range_km.is_not_null()).collect().to_pandas()\n",
     ")"
    ]
   },
@@ -126,12 +126,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "7fc7825d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## This is Kent Beck:\n",
+    "\n",
+    "![alt text](image.png){width=250}\n",
+    "- Kent coined the term TDD\n",
+    "- Kent created one of the first testing frameworks\n",
+    "- Kent found that a testing framework should be written in the same language as the code\n",
+    "- Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
+    "- Kent has usually good ideas about software development"
+   ]
   },
   {
    "cell_type": "code",
@@ -160,6 +167,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import polars.selectors as cs\n",
+    "\n",
     "(\n",
     "    emissions_for_tdd.drop_nulls(subset=\"model_variant\")\n",
     "    .with_columns(pl.col.fuel_type.str.to_lowercase().str.strip_chars())\n",
@@ -173,7 +182,6 @@
     "            \"model_type\",\n",
     "            \"model_variant\",\n",
     "            \"brand_name\",\n",
-    "\n",
     "            \"year\",\n",
     "            \"registered_category\",\n",
     "        ],\n",
@@ -181,9 +189,11 @@
     "    .pipe(plg.custom_check, pl.col.fuel_type.str.contains(r\"[A-Z]\").not_())\n",
     "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
     "    .pipe(\n",
-    "        plg.unique_combination_of_columns, [\"vehicle_id\", \"year\", \"used_in_calculation\"]\n",
+    "        plg.unique_combination_of_columns,\n",
+    "        [\"vehicle_id\", \"year\", \"used_in_calculation\"],\n",
     "    )\n",
-    "    .pipe(plg.has_mandatory_values, {\"year\": [2021, 2022, 2023]}, group_by=\"vehicle_id\")\n",
+    "    # .pipe(plg.has_mandatory_values, {\"year\": [2021, 2022, 2023]}, group_by=\"vehicle_id\")\n",
+    "    .pipe(plg.accepted_range, {\"engine_power_kw\": (0, 600), \"mass_kg\": (1000, 3000)})\n",
     "\n",
     ")"
    ]
@@ -214,6 +224,14 @@
     "    # .pipe(plg.che)\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d6bc1d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
