Add more context for exploration with plg

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -133,11 +133,12 @@
     "## This is Kent Beck:\n",
     "\n",
     "![alt text](image.png){width=250}\n",
+    "\n",
     "- Kent coined the term TDD\n",
     "- Kent created one of the first testing frameworks\n",
     "- Kent found that a testing framework should be written in the same language as the code\n",
     "- Kent say that TDD reduces developer anxiety (Better than Xanax!)\n",
-    "- Kent has usually good ideas about software development"
+    "- Kent has usually good ideas about software development\n"
    ]
   },
   {
@@ -167,13 +168,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import polars.selectors as cs\n",
+    "primary_key_columns = [\n",
+    "    \"vehicle_id\",\n",
+    "    \"reporting_period\",\n",
+    "    \"obfcm_data_source\",\n",
+    "    \"used_in_calculation\",\n",
+    "]\n",
     "\n",
     "(\n",
-    "    emissions_for_tdd.drop_nulls(subset=\"model_variant\")\n",
-    "    .with_columns(pl.col.fuel_type.str.to_lowercase().str.strip_chars())\n",
+    "    emissions_for_tdd.drop_nulls(subset=[\"model_variant\", \"license_plate\"])\n",
+    "    .with_columns(pl.col.fuel_type.str.to_lowercase())\n",
     "    .filter(pl.col.fuel_type.is_in([\"diesel\", \"petrol\"]).not_())\n",
-    "    .filter(pl.len().over([\"vehicle_id\", \"year\", \"used_in_calculation\"]) == 1)\n",
+    "    .cast({\"used_in_calculation\": pl.Boolean})\n",
+    "    .filter(pl.len().over(primary_key_columns) == 1)\n",
+    "    .pipe(plg.accepted_range, {\"mass_kg\": (1000, 3000), \"engine_power_kw\": (25, 600)})\n",
     "    .pipe(\n",
     "        plg.has_no_nulls,\n",
     "        [\n",
@@ -181,19 +189,21 @@
     "            \"manufacturer_name\",\n",
     "            \"model_type\",\n",
     "            \"model_variant\",\n",
+    "            \"license_plate\",\n",
     "            \"brand_name\",\n",
-    "            \"year\",\n",
-    "            \"registered_category\",\n",
+    "            # for primary key\n",
+    "            \"vehicle_id\",\n",
+    "            \"reporting_period\",\n",
+    "            \"used_in_calculation\",\n",
     "        ],\n",
     "    )\n",
     "    .pipe(plg.custom_check, pl.col.fuel_type.str.contains(r\"[A-Z]\").not_())\n",
-    "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
     "    .pipe(\n",
     "        plg.unique_combination_of_columns,\n",
-    "        [\"vehicle_id\", \"year\", \"used_in_calculation\"],\n",
+    "        primary_key_columns,\n",
     "    )\n",
-    "    # .pipe(plg.has_mandatory_values, {\"year\": [2021, 2022, 2023]}, group_by=\"vehicle_id\")\n",
-    "    .pipe(plg.accepted_range, {\"engine_power_kw\": (0, 600), \"mass_kg\": (1000, 3000)})\n",
+    "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
+    "    .pipe(plg.has_dtypes, {\"used_in_calculation\": pl.Boolean})\n",
     "\n",
     ")"
    ]
@@ -215,7 +225,8 @@
     "        \"brand_name\",\n",
     "        \"commercial_name\",\n",
     "        \"registered_category\",\n",
-    "    ).unique()\n",
+    "    )\n",
+    "    .unique()\n",
     "    # .group_by(\"model_variant\")\n",
     "    # .agg(pl.all().unique())\n",
     "    .select(\"brand_name\")\n",
