Add full stock logic for presentation

--- a/demonstration copy.ipynb
+++ b/demonstration copy.ipynb
@@ -204,7 +204,6 @@
     "    )\n",
     "    .pipe(plg.not_accepted_values, {\"fuel_type\": [\"diesel\", \"petrol\"]})\n",
     "    .pipe(plg.has_dtypes, {\"used_in_calculation\": pl.Boolean})\n",
-    "\n",
     ")"
    ]
   },
@@ -242,7 +241,66 @@
    "id": "8d6bc1d6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "full_stocks_by_10min = (\n",
+    "    pl.read_parquet(\"data/stocks.parquet\")\n",
+    "    .filter(\n",
+    "        (\n",
+    "            pl.col.zone.is_in([\"zone_28\", \"zone_29\", \"zone_17\"])\n",
+    "            & (pl.col.subzone == \"subzone_a\")\n",
+    "        ).not_()\n",
+    "    )\n",
+    "    .with_columns(\n",
+    "        pl.col.timestamp.cast(pl.Datetime(time_unit=\"ms\")).dt.truncate(\"10m\"),\n",
+    "        pl.col.stock_value.clip(0, None),\n",
+    "    )\n",
+    "    .group_by(\"zone\", \"subzone\", \"timestamp\")\n",
+    "    .agg(\n",
+    "        pl.col.stock_value.min().name.suffix(\"_min\"),\n",
+    "        pl.col.stock_value.max().name.suffix(\"_max\"),\n",
+    "    )\n",
+    "    .with_columns(\n",
+    "        date=pl.col.timestamp.dt.date(),\n",
+    "    )\n",
+    "    .filter(pl.len().over(\"zone\", \"subzone\", \"date\") > 1)\n",
+    "    .sort(\"zone\", \"subzone\", \"timestamp\")\n",
+    "    .pipe(plg.has_dtypes, {\"timestamp\": pl.Datetime(time_unit=\"ms\")})\n",
+    "    .pipe(plg.has_no_nulls)\n",
+    "    .pipe(plg.is_monotonic, \"timestamp\", strict=True, group_by=[\"zone\", \"subzone\"])\n",
+    "    .pipe(plg.unique_combination_of_columns, [\"zone\", \"subzone\", \"timestamp\"])\n",
+    "    .pipe(\n",
+    "        plg.accepted_range, {\"stock_value_min\": (0, None), \"stock_value_max\": (0, None)}\n",
+    "    )\n",
+    "    .pipe(\n",
+    "        plg.custom_check,\n",
+    "        (\n",
+    "            pl.col.zone.is_in([\"zone_28\", \"zone_29\", \"zone_17\"])\n",
+    "            & (pl.col.subzone == \"subzone_a\")\n",
+    "        ).not_(),\n",
+    "    )\n",
+    "    .pipe(plg.not_constant, columns=\"timestamp\", group_by=[\"zone\", \"subzone\", \"date\"])\n",
+    ")\n",
+    "full_stocks_by_10min"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce0c62a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    full_stocks_by_10min\n",
+    "    .group_by(\"zone\", \"subzone\", \"date\")\n",
+    "    .agg(\n",
+    "        pl.col.stock_value_min.min(),\n",
+    "        pl.col.stock_value_max.max(),\n",
+    "        max_interval=pl.col.timestamp.diff().max(),\n",
+    "        n_observations=pl.len(),\n",
+    "    ).sort(\"max_interval\", descending=True)\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
